# Godot-Rust-MCP

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLADUE.md  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
.mcp/: server.json
addons/harness/: LICENSE  README.md  harness_invariants.gd  harness_router.gd  harness_server.gd
commands/: setup.md
docs/: PUBLISHING.md
examples/: example_adapter.gd  smoke_test.py
src/: godot_ws.py  server.py
src/rules/: error_patterns.json  gdext_rules.json  migration_map.json  perf_rules.json
src/tools/: __init__.py  analysis.py  diagnose.py  gdext.py  migration.py  performance.py  structure.py
tests/: test_godot_ws.py  test_new_tools.py  test_phase2_tools.py  test_phase3_tools.py  test_server.py
